// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SeeResume Component > renders correctly for desktop 1`] = `
<DocumentFragment>
  <div
    class="w-full p-2 cursor-pointer bg-transparent"
  >
    <a
      class="flex flex-col gap-1 flex-wrap text-white rounded-xl  transition-all h-full bg-transparent"
      href="/src/assets/documents/George%20Gil%20Garib%20CV.pdf"
      target="_blank"
    >
      <img
        alt="Resume Icon"
        class="relative  shadow-xl"
        data-testid="resume-icon"
        src="/src/assets/images/resume.png"
        width="120"
      />
      <div
        class="absolute mt-5 ml-1 md:ml-2 md:mt-10"
      >
        <p
          class="font-bold text-[1.0em] text-blue-500"
          data-testid="resume-button-text-title"
        >
          Resume
        </p>
        <p
          class="font-bold text-[0.70em] text-blue-500 -mt-1"
          data-testid="resume-button-text-name"
        >
          George Gil
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`SeeResume Component > renders correctly for mobile 1`] = `
<DocumentFragment>
  <div
    class="w-full p-2 cursor-pointer bg-transparent"
  >
    <a
      class="flex flex-col gap-1 flex-wrap text-white rounded-xl  transition-all h-full bg-transparent"
      href="/src/assets/documents/George%20Gil%20Garib%20Resume.pdf"
      target="_blank"
    >
      <img
        alt="Resume Icon"
        class="relative  shadow-xl"
        data-testid="resume-icon"
        src="/src/assets/images/resume.png"
        width="100"
      />
      <div
        class="absolute mt-5 ml-1 md:ml-2 md:mt-10"
      >
        <p
          class="font-bold text-[0.65em] text-blue-500"
          data-testid="resume-button-text-title"
        >
          Resume
        </p>
        <p
          class="font-bold text-[0.3em] text-blue-500 -mt-1"
          data-testid="resume-button-text-name"
        >
          George Gil
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
